WIP Tile Cursor

--- a/Visual Studio/2D RPG Negiramen/Views/TileCropPage.xaml
+++ b/Visual Studio/2D RPG Negiramen/Views/TileCropPage.xaml
@@ -377,7 +377,7 @@
                     <GraphicsView.Drawable>
                         <modelsDrawing:TileCursor BindingContext="{x:Reference thisContentPage}"
                                                   HalfThicknessOfTileCursorLine="{Binding TileCropPageVM.HalfThicknessOfTileCursorLine}"
-                                                  SelectedTileSize="{Binding TileCropPageVM.SourceSelectedTileSize}"
+                                                  WorkingSelectedTileRect="{Binding TileCropPageVM.WorkingSelectedTileRect}"
                                                   SelectingOnPointingDevice="{Binding TileCropPageVM.SelectingOnPointingDevice}"/>
                     </GraphicsView.Drawable>
                 </GraphicsView>
