タイルセット設定は直したが、カーソル位置からレコードを読み込んでくれない

--- a/Visual Studio/2D RPG Negiramen/Views/TileCropPage.xaml
+++ b/Visual Studio/2D RPG Negiramen/Views/TileCropPage.xaml
@@ -361,7 +361,7 @@
                               InputTransparent="True">
                     <GraphicsView.Drawable>
                         <modelsDrawing:ColoredMap BindingContext="{x:Reference thisContentPage}"
-                                                  TilesetSettings="{Binding TileCropPageVM.TilesetSettings}"/>
+                                                  TilesetSettingsVM="{Binding TileCropPageVM.TilesetSettingsVM}"/>
                     </GraphicsView.Drawable>
                 </GraphicsView>
 
