切抜きカーソルのズーム対応

--- a/Visual Studio/2D RPG Negiramen/Views/TileCropPage.xaml
+++ b/Visual Studio/2D RPG Negiramen/Views/TileCropPage.xaml
@@ -371,7 +371,8 @@
                 <GraphicsView HorizontalOptions="Start" VerticalOptions="Start"
                               Margin="{Binding WorkingCroppedCursorPointAsMargin}"
                               WidthRequest="{Binding WorkingCroppedCursorCanvasWidthAsFloat}" HeightRequest="{Binding WorkingCroppedCursorCanvasHeightAsFloat}"
-                              InputTransparent="True">
+                              InputTransparent="True"
+                              x:Name="croppedCursor1">
                     <GraphicsView.Drawable>
                         <modelsDrawing:CroppedCursor BindingContext="{x:Reference thisContentPage}"
                                                      HalfThicknessOfTileCursorLine="{Binding TileCropPageVM.HalfThicknessOfTileCursorLine}"
