カラーマップの再描画

--- a/Visual Studio/2D RPG Negiramen/Views/TileCropPage.xaml
+++ b/Visual Studio/2D RPG Negiramen/Views/TileCropPage.xaml
@@ -354,7 +354,7 @@
                 <!--    カラード・マップ
                         ================
                 -->
-                <GraphicsView x:Name="coloredMapGraphicsView"
+                <GraphicsView x:Name="coloredMapGraphicsView1"
                               HorizontalOptions="Start" VerticalOptions="Start"
                               Margin="4,4,0,0"
                               WidthRequest="{Binding TilesetWorkingImageWidthAsInt}" HeightRequest="{Binding TilesetWorkingImageHeightAsInt}"
