追加ボタン動作修正

--- a/Visual Studio/2D RPG Negiramen/Views/TileCropPage.xaml
+++ b/Visual Studio/2D RPG Negiramen/Views/TileCropPage.xaml
@@ -312,7 +312,7 @@
                             * だからマージンは 4px 取っておく
                 -->
                 <skia:SKCanvasView IsVisible="True"
-                                   x:Name="skiaTilesetCanvas"
+                                   x:Name="skiaTilesetCanvas1"
                                    Grid.Row="0" Grid.Column="0"
                                    HorizontalOptions="Start" VerticalOptions="Start"
                                    Margin="4,4,0,0"
