--- a/Visual Studio/2D RPG Negiramen/Views/TileCropPage.xaml
+++ b/Visual Studio/2D RPG Negiramen/Views/TileCropPage.xaml
@@ -79,7 +79,14 @@
         </Grid>
     </Shell.TitleView>
 
-    <Grid RowDefinitions="156,*,240">
+    <!--
+        (0) 上メニュー
+        (1) 上メニュー（デバッグ用。使う時に広げること）
+        (2) コンテンツ領域
+        (3) 下メニュー（デバッグ用。使う時に広げること）
+        (4) 下メニュー
+    -->
+    <Grid RowDefinitions="156,0,*,0,240">
 
         <!--    上メニュー
                 ==========
@@ -284,7 +291,8 @@
 
         </Grid>
 
-        <ScrollView Grid.Row="1">
+        <!-- コンテンツ領域 -->
+        <ScrollView Grid.Row="2">
             <Grid RowDefinitions="*" ColumnDefinitions="*">
 
                 <!--
@@ -377,7 +385,7 @@
         <!--    下メニュー
                 ==========
         -->
-        <Grid Grid.Row="2"
+        <Grid Grid.Row="4"
               RowDefinitions="20,48,20,48,20,48,20" ColumnDefinitions="128,64,64,64,64,64,*"
               Padding="8,8,8,8"
               BackgroundColor="SkyBlue">
