--- a/Visual Studio/2D RPG Negiramen/Views/TileCropPage.xaml
+++ b/Visual Studio/2D RPG Negiramen/Views/TileCropPage.xaml
@@ -80,19 +80,21 @@
     </Shell.TitleView>
 
     <!--
-        (0) 上メニュー
-        (1) 上メニュー（デバッグ用。使う時に広げること）
-        (2) コンテンツ領域
-        (3) 下メニュー（デバッグ用。使う時に広げること）
-        (4) 下メニュー
+        Row     Height      Description
+        ===     ========    ================================================
+          0     88          上メニュー
+          1      0 or 68    上メニュー（デバッグ用。使う時に広げること）
+          2      *          コンテンツ領域
+          3      0          下メニュー（デバッグ用。使う時に広げること）
+          4                 下メニュー
     -->
-    <Grid RowDefinitions="156,0,*,0,240">
+    <Grid RowDefinitions="88,0,*,0,240">
 
         <!--    上メニュー
                 ==========
         -->
         <Grid Grid.Row="0"
-              RowDefinitions="20,48,20,48" ColumnDefinitions="64,64,64,64,64,64,64,64,64,64,64,*"
+              RowDefinitions="20,48" ColumnDefinitions="64,64,64,64,64,64,64,64,64,64,64,*"
               Padding="8,8,8,8"
               BackgroundColor="SkyBlue">
 
@@ -232,63 +234,76 @@
                                                        MaximumDecimalPlaces="1" />
                 </Entry.Behaviors>
             </Entry>
+        </Grid>
 
-
-            <!--    ◆３段目　ラベル列
+        <!--    上メニュー（デバッグ用）
+                ========================
+        
+                            IsVisible
+                            =========
+                使用時      True
+                非使用時    False
+        -->
+        <Grid Grid.Row="1"
+              IsVisible="False"
+              RowDefinitions="20,48" ColumnDefinitions="64,64,64,64,64,64,64,64,64,64,64,*"
+              Padding="8,8,8,8"
+              BackgroundColor="SkyBlue">
+            
+            <!--    ◆１段目　ラベル列
                     ==================
             -->
 
-            <!--    ◆４段目 入出力行
+            <!--    ◆２段目 入出力行
                     =================
             -->
             <!-- 「作業中」 -->
-            <Label Grid.Row="3" Grid.Column="0"
+            <Label Grid.Row="1" Grid.Column="0"
                    HorizontalTextAlignment="End"
                    VerticalTextAlignment="Center"
                    Text="{app:Translate Working}"/>
-            
+
             <!-- 元画像の横幅。読取専用 -->
-            <Label Grid.Row="3" Grid.Column="1"
+            <Label Grid.Row="1" Grid.Column="1"
                    HorizontalTextAlignment="End"
                    VerticalTextAlignment="Center"
                    FontSize="24"
                    Text="{Binding TilesetWorkingImageWidthAsInt}"/>
 
             <!-- 元画像の縦幅。読取専用 -->
-            <Label Grid.Row="3" Grid.Column="2"
+            <Label Grid.Row="1" Grid.Column="2"
                    HorizontalTextAlignment="End"
                    VerticalTextAlignment="Center"
                    FontSize="24"
                    Text="{Binding TilesetWorkingImageHeightAsInt}"/>
 
             <!-- ズーム後：グリッド位相左 -->
-            <Label Grid.Row="3" Grid.Column="4"
+            <Label Grid.Row="1" Grid.Column="4"
                    HorizontalTextAlignment="End"
                    VerticalTextAlignment="Center"
                    FontSize="24"
                    Text="{Binding WorkingGridPhaseLeftAsFloat}"/>
 
             <!-- ズーム後：グリッド位相上 -->
-            <Label Grid.Row="3" Grid.Column="5"
+            <Label Grid.Row="1" Grid.Column="5"
                    HorizontalTextAlignment="End"
                    VerticalTextAlignment="Center"
                    FontSize="24"
                    Text="{Binding WorkingGridPhaseTopAsFloat}"/>
 
             <!-- ズーム後：タイル横幅 -->
-            <Label Grid.Row="3" Grid.Column="7"
+            <Label Grid.Row="1" Grid.Column="7"
                    HorizontalTextAlignment="End"
                    VerticalTextAlignment="Center"
                    FontSize="24"
                    Text="{Binding WorkingGridTileWidthAsFloat}"/>
 
             <!-- ズーム後：タイル縦幅 -->
-            <Label Grid.Row="3" Grid.Column="8"
+            <Label Grid.Row="1" Grid.Column="8"
                    HorizontalTextAlignment="End"
                    VerticalTextAlignment="Center"
                    FontSize="24"
                    Text="{Binding WorkingGridTileHeightAsFloat}"/>
-
         </Grid>
 
         <!-- コンテンツ領域 -->
